Add Bank Management System to projects

--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
             <section id="projects">
                 <h2>Projects</h2>
                 <div class="card-grid">
+			<div class="card">
+    				<h3>Bank Management System | C++ & Docker</h3>
+    				<p>A full-featured banking application built in C++ and containerized with Docker. Features a server with API endpoints for creating accounts, viewing balances, and performing transactions, with data persisted in an SQLite database.</p>
+    				<a href="https://github.com/Ayushkumar022/Bank-Management-System" target="_blank">View on GitHub</a>
+			</div>
                     <div class="card">
                         <h3>Homestays Website | Full-Stack MERN Application</h3>
                         <p>Engineered a full-stack web application for booking and managing homestays using the MERN stack. Implemented robust user authentication, dynamic property listings, a comprehensive booking management system, and integrated a secure payment gateway.</p>
