--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <div class="education-entry">
                     <h3>University of Engineering & Management, Jaipur</h3>
                     <p>B.Tech in Computer Science and Engineering | Expected 2026</p>
-                    <p>Current CGPA: 7.34 | SGPA (Sem 5): 8.23</p>
+                    <p>Current CGPA: 7.34</p>
                 </div>
                 <div class="education-entry">
                     <h3>GGPS, Bokaro Steel City, Jharkhand</h3>
